fix: Update image digest output format in workflow

--- a/.github/workflows/docker-paymentservice-metrics.yaml
+++ b/.github/workflows/docker-paymentservice-metrics.yaml
@@ -55,5 +55,5 @@ jobs:
           build-args: |
             PAYMENT_PORT=8080
 
-      - name: Image digest
+      - name: Show image digest
         run: echo "Image digest: ${{ steps.docker_build.outputs.digest }}"
