fix: Fix YAML indentation in workflow file

--- a/.github/workflows/docker-paymentservice-metrics.yaml
+++ b/.github/workflows/docker-paymentservice-metrics.yaml
@@ -56,4 +56,5 @@ jobs:
             PAYMENT_PORT=8080
 
       - name: Show image digest
-        run: echo "Image digest: ${{ steps.docker_build.outputs.digest }}"
+        run: |
+          echo "Image digest: ${{ steps.docker_build.outputs.digest }}"
