--- a/.github/workflows/docker-paymentservice-metrics.yaml
+++ b/.github/workflows/docker-paymentservice-metrics.yaml
@@ -37,8 +37,10 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
+          registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+          ecr: false
 
       - name: Build and push Docker image (multi-arch)
         id: docker_build
