--- a/.github/workflows/docker-paymentservice-metrics.yaml
+++ b/.github/workflows/docker-paymentservice-metrics.yaml
@@ -42,11 +42,26 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           ecr: false
 
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: List files (debug)
+        run: |
+          ls -la
+          ls -la src/
+          ls -la src/payment/
+
+
       - name: Build and push Docker image (multi-arch)
         id: docker_build
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: src/payment
           file: src/payment/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
