--- a/.github/workflows/docker-paymentservice-metrics.yaml
+++ b/.github/workflows/docker-paymentservice-metrics.yaml
@@ -33,7 +33,8 @@ jobs:
         run: |
           git clone https://github.com/open-telemetry/opentelemetry-demo.git
           cd opentelemetry-demo
-          git checkout v1.10.0  # Use a specific version for consistency
+          # Using a commit hash that matches the Helm chart version 0.34.2
+          git checkout 8b2b4b166b32433c83e50cd3efccb9ceb2347451
 
       - name: Set up QEMU (for multi-arch)
         uses: docker/setup-qemu-action@v3
