--- a/.github/workflows/docker-paymentservice-metrics.yaml
+++ b/.github/workflows/docker-paymentservice-metrics.yaml
@@ -14,6 +14,7 @@ on:
   push:
     paths:
       - '.github/workflows/docker-paymentservice-metrics.yaml'
+      - 'payment-service/**'
   workflow_dispatch:
 
 jobs:
