--- a/config/otelcol-config-extras.yaml
+++ b/config/otelcol-config-extras.yaml
@@ -4,31 +4,26 @@
 # extra settings to be merged into OpenTelemetry Collector configuration
 # do not delete this file
 
-## Example configuration for sending data to your own OTLP HTTP backend
-## Note: the spanmetrics exporter must be included in the exporters array
-## if overriding the traces pipeline.
-##
-#  exporters:
-#    otlphttp/example:
-#      endpoint: <your-endpoint-url>
-#
-#  service:
-#    pipelines:
-#      traces:
-#        exporters: [spanmetrics, otlphttp/example]
-
 opentelemetry-collector:
   config:
     exporters:
       debug: {}
       prometheus:
         endpoint: "0.0.0.0:8889"
+      otlp/jaeger:
+        endpoint: "otel-demo-jaeger-collector:4317"
+        tls:
+          insecure: true
       opensearch:
         http:
           endpoint: http://otel-demo-opensearch:9200
           tls:
             insecure: true
         logs_index: otel
+      otlphttp/prometheus:
+        endpoint: http://prometheus:9090/api/v1/otlp
+        tls:
+          insecure: true
 
     processors:
       batch: {}
@@ -65,11 +60,11 @@ opentelemetry-collector:
         traces:
           receivers: [otlp]
           processors: [memory_limiter, k8sattributes, resource, batch]
-          exporters: [debug, spanmetrics]
+          exporters: [debug, otlp/jaeger, spanmetrics]
         metrics:
           receivers: [otlp, spanmetrics]
           processors: [memory_limiter, k8sattributes, resource, batch]
-          exporters: [prometheus, debug]
+          exporters: [otlphttp/prometheus, debug]
         logs:
           receivers: [otlp]
           processors: [memory_limiter, k8sattributes, resource, batch]
